--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-header [(isGridDisplay)]="isGridDisplay"></app-header>
-<app-main [isGridDisplay]="isGridDisplay"></app-main>
+<app-header></app-header>
+<router-outlet></router-outlet>
