--- a/src/app/notes/components/main/content/content.component.scss
+++ b/src/app/notes/components/main/content/content.component.scss
@@ -3,10 +3,8 @@
     flex-direction: column;
     padding: 1rem;
     height: 40rem;
-    max-width: 10rem;
     overflow-y: auto;
     overflow-x: hidden;
-    transition: width 0.3s ease-in-out;
 
     &:hover {
         width: auto;
@@ -16,27 +14,21 @@
         width: 0.5rem;
 
         &-thumb {
-            background-color: rgb(108, 108, 108); 
+            background-color: rgb(108, 108, 108);
         }
+    }
+
+    .active-link {
+        background-color: rgba(65, 51, 28);
     }
 
     .side {
         display: flex;
         align-items: center;
-        justify-content: center;
         padding: 0.75rem;
-        width: max-content;
         cursor: pointer;
-        gap: 1rem;
-        transition: width 0.3s ease-in-out;
-
-        &>i {
-            font-size: 1.25rem;
-        }
-
         &:hover {
             background-color: rgba(84, 84, 84, 0.245);
-            border-radius: 0 2rem 2rem 0;
         }
     }
 }
