--- a/src/app/notes/components/main/main.component.html
+++ b/src/app/notes/components/main/main.component.html
@@ -1,4 +1,5 @@
 <div class="main">
     <app-content></app-content>
     <app-note-display [isGridDisplay]="isGridDisplay"></app-note-display>
+    <router-outlet></router-outlet>
 </div>
