--- a/src/app/notes/components/main/main.component.scss
+++ b/src/app/notes/components/main/main.component.scss
@@ -1,9 +1,15 @@
-.main{
+.main {
     display: flex;
-    &>:nth-child(1){
+
+    &>:nth-child(1) {
         position: absolute;
+        left: 0;
+        z-index: 1;
+        background-color: rgb(32, 33, 36);
     }
-    &>:nth-child(2){
+
+    &>:nth-child(2) {
         flex: 1;
+        margin-left: 5rem;
     }
 }
