--- a/src/app/notes/components/main/note-display/note-details/note-details/note-details.component.scss
+++ b/src/app/notes/components/main/note-display/note-details/note-details/note-details.component.scss
@@ -1,94 +1,162 @@
-.single-note {
+.popup-background {
+    position: fixed;
+    top: 0;
+    z-index: 2;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
     display: flex;
-    flex-direction: column;
-    border: 1px solid rgb(95, 99, 104);
-    border-radius: 0.25rem;
-    width: 40rem;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-    padding: 0.5rem;
+    justify-content: center;
+    align-items: center;
 
-    .icon {
+    &>.single-note {
         display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 2.5rem;
-        cursor: pointer;
-        width: 2.5rem;
-        border-radius: 50%;
+        flex-direction: column;
+        border: 1px solid rgb(95, 99, 104);
+        border-radius: 0.25rem;
+        width: 40rem;
+        max-height: 30rem;
+        z-index: 3;
+        background-color: rgb(32, 33, 36);
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
 
-        &>i {
-            font-size: medium;
-        }
+        .icon {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 2.5rem;
+            width: 2.5rem;
+            cursor: pointer;
+            border-radius: 50%;
+            transition: opacity 0.3s;
 
-        &:hover {
-            background-color: rgba(84, 84, 84, 0.245);
-        }
-    }
+            &>i {
+                font-size: medium;
+            }
 
-    &>header {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-
-        &>p {
-            color: rgb(204, 204, 204);
-            font-weight: bold;
-        }
-    }
-
-    &>main {
-        &>textarea {
-            color: rgb(137, 137, 137);
-            text-align: justify;
-            border: none;
-            outline: none;
-            resize: none;
-            height: auto;
-            white-space: pre-line;
-            width: 100%;
-            background-color: transparent;
-        }
-
-        .edited-on {
-            text-align: right;
-
-            &>p {
-                color: rgb(137, 137, 137);
-                font-size: small;
-                font-style: italic;
+            &:hover {
+                background-color: rgba(84, 84, 84, 0.245);
             }
         }
 
-        .labels {
+        &>.info {
+            display: flex;
+            width: 100%;
+            padding: 0.5rem;
+            max-height: 20rem;
+            overflow-y: auto;
+
+            &::-webkit-scrollbar {
+                width: 0.5rem;
+
+                &-thumb {
+                    background-color: rgb(108, 108, 108);
+                }
+            }
+
+            &>.note-content {
+                width: 100%;
+                height: max-content;
+
+                &>header {
+                    width: 100%;
+                    color: rgb(204, 204, 204);
+                    font-weight: bold;
+                    margin-bottom: 5px;
+                    text-align: justify;
+                }
+
+                &>textarea {
+                    box-sizing: border-box;
+                    background-color: transparent;
+                    border: none;
+                    width: 100%;
+                    height: auto;
+                    outline: none;
+                    resize: none;
+                    white-space: pre-line;
+                }
+            }
+        }
+
+        &>.labels {
             display: flex;
             flex-wrap: wrap;
             gap: 0.5rem;
+            padding: 0 0.25rem;
 
             &>p {
-                color: rgb(137, 137, 137);
                 font-size: small;
-                border: 1px solid rgb(95, 99, 104);
+                border: 1px solid rgb(179, 179, 179);
                 padding: 0.25rem;
                 border-radius: 0.5rem;
             }
         }
-    }
 
-    &>footer {
-        display: flex;
-        align-items: center;
-
-        &>button {
-            background-color: transparent;
-            border-radius: 0.25rem;
-            padding: 0.5rem;
+        &>.edited-on {
+            padding: 0.25rem;
+            text-align: right;
+            width: 100%;
             color: rgb(137, 137, 137);
-            border: none;
-            font-weight: bold;
-            outline: none;
+            font-size: small;
+            font-style: italic;
+        }
 
-            &:hover {
-                background-color: rgba(84, 84, 84, 0.245);
+        &>footer {
+            display: flex;
+            align-items: center;
+            position: relative;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
+            &>.icon {
+                &>.name {
+                    position: absolute;
+                    width: max-content;
+                    padding: 0.15rem;
+                    border-radius: 0.25rem;
+                    bottom: -1rem;
+                    text-align: center;
+                    font-size: small;
+                    background-color: rgba(82, 83, 85, 0.67);
+                }
+            }
+
+            &>button {
+                margin-left: 10rem;
+                background-color: transparent;
+                border-radius: 0.25rem;
+                padding: 0.5rem;
+                color: rgb(137, 137, 137);
+                border: none;
+                font-weight: bold;
+                outline: none;
+
+                &:hover {
+                    background-color: rgba(84, 84, 84, 0.245);
+                }
+            }
+
+            &>.options {
+                position: absolute;
+                bottom: 1.5rem;
+                left: 10rem;
+            }
+
+            &>.label-editor-component {
+                position: absolute;
+                bottom: 2rem;
+                right: -1rem;
+                background-color: rgb(32, 33, 36);
+                z-index: 1;
+            }
+
+            &>.color-picker {
+                position: absolute;
+                align-self: center;
+                bottom: -6rem;
             }
         }
     }
