--- a/src/app/notes/components/main/note-display/note-display.component.scss
+++ b/src/app/notes/components/main/note-display/note-display.component.scss
@@ -97,14 +97,13 @@
                 }
 
                 &>textarea {
-                    height: 2.5rem;
-                    width: 25rem;
                     background-color: transparent;
                     border: none;
                     width: 100%;
                     outline: none;
                     resize: none;
                     height: auto;
+                    overflow: visible;
                     white-space: pre-line;
                 }
             }
@@ -138,7 +137,7 @@
         }
     }
 
-    .contents {
+    &>.contents {
         display: flex;
         flex-wrap: wrap;
         gap: 0.5rem;
