label based display

--- a/src/app/notes/components/main/main.component.html
+++ b/src/app/notes/components/main/main.component.html
@@ -1,5 +1,5 @@
 <div class="main">
     <app-content></app-content>
-    <app-note-display [isGridDisplay]="isGridDisplay"></app-note-display>
+    <app-note-display></app-note-display>
     <router-outlet></router-outlet>
 </div>
