--- a/src/app/notes/components/main/note-display/take-notes/take-notes.component.scss
+++ b/src/app/notes/components/main/note-display/take-notes/take-notes.component.scss
@@ -81,6 +81,7 @@
             &>textarea {
                 background-color: transparent;
                 border: none;
+                white-space: pre-wrap;
                 width: 100%;
                 outline: none;
                 resize: none;
