--- a/src/app/notes/components/main/content/content.component.html
+++ b/src/app/notes/components/main/content/content.component.html
@@ -1,6 +1,7 @@
 <div class="contents" (mouseenter)="showAllLabels()" (mouseleave)="hideAllLabels()"
     [ngStyle]="{boxShadow: showLabels() ? '5px 0 5px -5px rgba(0, 0, 0, 0.5)' : ''}">
-    <a routerLinkActive="active-link" routerLink={{item.routerLink}} class="side" *ngFor="let item of generalIconData"
+    <a routerLinkActive="active-link" routerLink={{item.routerLink}} [routerLinkActiveOptions]="{ exact: true }"
+        class="side" *ngFor="let item of generalIconData"
         [ngStyle]="{'border-radius': showLabels() ? '0 2rem 2rem 0' : '50%',width:showLabels()?'12rem':'max-content'}">
         <i [ngClass]="item.iconClasses" [ngStyle]="{width:showLabels()?'2rem':'max-content'}"></i>
         <p *ngIf="showLabels()">{{item.iconName}}</p>
