--- a/src/app/notes/components/main/note-display/color-picker/color-picker.component.scss
+++ b/src/app/notes/components/main/note-display/color-picker/color-picker.component.scss
@@ -1,23 +1,34 @@
-.color-pallete,.image-pallete{
+.color-pallete,
+.image-pallete {
     display: flex;
     // flex-wrap: wrap;
     gap: 0.25rem;
     padding: 0.5rem;
     background-color: rgb(32, 33, 36);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-    .color,.image{
+
+    .color,
+    .image {
         height: 2rem;
         width: 2rem;
-        border-radius:50%;
+        border-radius: 50%;
         cursor: pointer;
-        &:hover{
-            border: 1px solid ;
+        position: relative;
+
+        &:hover {
+            border: 1px solid;
         }
     }
-    .transparentBorder{
-        border: 1px solid ;
+
+    &>:nth-child(1) {
+        border: 1px solid;
     }
-    .image{
+
+    .transparentBorder {
+        border: 1px solid;
+    }
+
+    .image {
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
