--- a/src/app/notes/components/main/note-display/single-note/single-note/single-note.component.html
+++ b/src/app/notes/components/main/note-display/single-note/single-note/single-note.component.html
@@ -4,13 +4,20 @@
         <main class="content" (click)="openNoteDetails()">
             <header>{{note.title}}</header>
             <p>{{note.content.slice(0, 550)}}{{note.content.length > 550 ? "..." : ""}}</p>
-            <div *ngIf="note.labels && note.labels.length > 0" class="labels">
-                <p *ngFor="let item of note.labels">{{item}}</p>
-            </div>
         </main>
         <div class="icon" (click)="pinNote()">
             <i class="fa-solid fa-thumbtack" [ngStyle]="{color: note.isPinned ? 'rgb(251,188,4)' : ''}"></i>
         </div>
+    </div>
+    <div class="labels">
+        <ng-container *ngFor="let item of note.labels; let i = index">
+            <p *ngIf="i < 3" class="label">{{ item }}</p>
+        </ng-container>
+        <ng-container *ngIf="note.labels">
+            <span *ngIf="note.labels.length > 3">
+                +{{ note.labels.length - 3 }} more
+            </span>
+        </ng-container>
     </div>
     <footer>
         <div class="icon" *ngFor="let item of iconData">
