--- a/src/app/notes/components/main/content/content.component.scss
+++ b/src/app/notes/components/main/content/content.component.scss
@@ -5,7 +5,9 @@
     height: 40rem;
     overflow-y: auto;
     overflow-x: hidden;
-
+    p{
+        margin: 0;
+    }
     &:hover {
         width: auto;
     }
