--- a/src/app/notes/components/main/note-display/note-remainder/note-remainder.component.html
+++ b/src/app/notes/components/main/note-display/note-remainder/note-remainder.component.html
@@ -6,7 +6,7 @@
         </div>
     </div>
     <div class="empty" *ngIf="!notes?.length">
-        <i class="fa-solid fa-file-export"></i>
-        <p>Your archieved notes appear here</p>
+        <i class="fa-solid fa-bell"></i>
+        <p>Notes with upcoming reminders appear here</p>
     </div>
 </div>
