--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,3 +16,5 @@ i {
    font-size: 1.25rem;
    color: #cccccc8f;
 }
+// html, body { height: 100%; }
+// body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
