--- a/src/app/notes/components/main/note-display/note-details/note-details/note-details.component.html
+++ b/src/app/notes/components/main/note-display/note-details/note-details/note-details.component.html
@@ -4,7 +4,7 @@
             <div class="info">
                 <main class="note-content">
                     <header>{{note.title}}</header>
-                    <textarea #textcontent type="text" [(ngModel)]="note.content"
+                    <textarea #textcontent type="text" [(ngModel)]="note.content"  appLabelExtractor (labelsChanged)="updateLabels($event)"
                         (input)="adjustTextareaHeight(textcontent)"></textarea>
 
                 </main>
@@ -33,6 +33,9 @@
             <div class="color-picker" (click)="showColorPicker()">
                 <app-color-picker [show]="show" [(selectedColor)]="selectedColor"
                     [(selectedImage)]="selectedImage"></app-color-picker>
+            </div>
+            <div class="remainder-setter" *ngIf="showRemainder">
+                <app-remainder-setter [(showRemainder)]="showRemainder"></app-remainder-setter>
             </div>
         </footer>
     </div>
