--- a/src/app/notes/components/main/note-display/note-details/note-details/note-details.component.scss
+++ b/src/app/notes/components/main/note-display/note-details/note-details/note-details.component.scss
@@ -121,7 +121,8 @@
                     width: max-content;
                     padding: 0.15rem;
                     border-radius: 0.25rem;
-                    bottom: -1rem;
+                    bottom: -1.5rem;
+                    z-index: 7;
                     text-align: center;
                     font-size: small;
                     background-color: rgba(82, 83, 85, 0.67);
@@ -161,6 +162,13 @@
                 position: absolute;
                 align-self: center;
                 bottom: -6rem;
+            }
+
+            &>.remainder-setter {
+                position: absolute;
+                align-self: center;
+                bottom: 2rem;
+                z-index: 5;
             }
         }
     }
