--- a/src/app/notes/components/main/note-display/note-display.component.scss
+++ b/src/app/notes/components/main/note-display/note-display.component.scss
@@ -6,6 +6,7 @@
     gap: 1rem;
     overflow-y: auto;
     align-items: center;
+    position: relative;
 
     &::-webkit-scrollbar {
         width: 0.5rem;
@@ -51,6 +52,23 @@
         gap: 0.5rem;
         height: 60rem;
 
+    }
+    &>.empty{
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 2rem;
+        top: 40%;
+        justify-content: center;
+        &>p{
+            font-size: 1.5rem;
+            color: rgb(154, 160, 166);
+        }
+        &>i{
+            font-size: 5rem;
+            color: rgb(55,56,58);
+        }
     }
 
 
