--- a/src/app/notes/components/main/note-display/single-note/single-note/single-note.component.scss
+++ b/src/app/notes/components/main/note-display/single-note/single-note/single-note.component.scss
@@ -58,6 +58,11 @@
                 text-align: justify;
             }
 
+            &>.empty {
+                color: rgb(204, 204, 204);
+                font-size: 1.5rem;
+            }
+
 
         }
 
@@ -69,7 +74,8 @@
         gap: 0.5rem;
         padding: 0 0.25rem;
 
-        &>p,span {
+        &>p,
+        span {
             font-size: small;
             border: 1px solid rgb(179, 179, 179);
             padding: 0.25rem;
@@ -88,7 +94,8 @@
                 width: max-content;
                 padding: 0.15rem;
                 border-radius: 0.25rem;
-                bottom: -1rem;
+                bottom: -1.5rem;
+                z-index: 7;
                 text-align: center;
                 font-size: small;
                 background-color: rgba(82, 83, 85, 0.67);
@@ -113,6 +120,13 @@
             position: absolute;
             align-self: center;
             bottom: -6rem;
+        }
+
+        &>.remainder-setter {
+            position: absolute;
+            align-self: center;
+            z-index: 5;
+            bottom: 2rem;
         }
     }
 }
