--- a/src/app/notes/components/main/note-display/take-notes/take-notes.component.html
+++ b/src/app/notes/components/main/note-display/take-notes/take-notes.component.html
@@ -35,4 +35,7 @@
         <app-color-picker [show]="show" [(selectedColor)]="selectedColor"
             [(selectedImage)]="selectedImage"></app-color-picker>
     </div>
+    <div class="remainder-setter" *ngIf="showRemainder">
+        <app-remainder-setter [(showRemainder)]="showRemainder"></app-remainder-setter>
+    </div>
 </div>
