--- a/src/app/notes/components/main/note-display/take-notes/take-notes.component.scss
+++ b/src/app/notes/components/main/note-display/take-notes/take-notes.component.scss
@@ -28,7 +28,7 @@
             width: max-content;
             padding: 0.15rem;
             border-radius: 0.25rem;
-            bottom: -1rem;
+            bottom: -1.5rem;
             text-align: center;
             font-size: small;
             background-color: rgba(82, 83, 85, 0.67);
@@ -117,5 +117,11 @@
         position: absolute;
         align-self: center;
         bottom: -6rem;
+    }
+    .remainder-setter{
+        position: absolute;
+        align-self: center;
+        bottom: -10rem;
+        z-index: 4;
     }
 }
