--- a/src/app/notes/components/main/notes-bin/notes-bin.component.scss
+++ b/src/app/notes/components/main/notes-bin/notes-bin.component.scss
@@ -6,6 +6,7 @@
     gap: 1rem;
     overflow-y: auto;
     align-items: center;
+    position: relative;
 
     &::-webkit-scrollbar {
         width: 0.5rem;
@@ -42,7 +43,7 @@
 
     }
 
-    .contents {
+    &>.contents {
         display: flex;
         flex-wrap: wrap;
         gap: 0.5rem;
@@ -147,6 +148,24 @@
                     }
                 }
             }
+        }
+    }
+
+    &>.empty{
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 2rem;
+        justify-content: center;
+        top: 40%;
+        &>p{
+            font-size: 1.5rem;
+            color: rgb(154, 160, 166);
+        }
+        &>i{
+            font-size: 5rem;
+            color: rgb(55,56,58);
         }
     }
 }
