--- a/src/app/notes/components/main/note-display/label-editor/label-editor.component.html
+++ b/src/app/notes/components/main/note-display/label-editor/label-editor.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="label-display">
         <div class="label" *ngFor="let item of filterLabels()">
-            <input type="checkbox" [checked]="note?.labels?.includes(item)" />
+            <input type="checkbox" [checked]="note?.labels?.includes(item)" (change)="changeLabels($event, item)"/>
             <p>{{item}}</p>
         </div>
     </div>
