--- a/src/app/notes/components/main/note-display/note-details/note-details/note-details.component.scss
+++ b/src/app/notes/components/main/note-display/note-details/note-details/note-details.component.scss
@@ -10,6 +10,10 @@
     justify-content: center;
     align-items: center;
 
+    p {
+        margin: 0;
+    }
+
     &>.single-note {
         display: flex;
         flex-direction: column;
@@ -93,8 +97,8 @@
 
                 &>p {
                     font-size: small;
-                    border: 1px solid rgb(179, 179, 179);
-                    padding: 0.25rem;
+                    border: 1px solid rgb(95, 99, 104);
+                    padding: 0.15rem;
                     border-radius: 0.5rem;
                 }
             }
@@ -106,6 +110,25 @@
                 color: rgb(137, 137, 137);
                 font-size: small;
                 font-style: italic;
+            }
+
+            &>.remainder {
+                display: flex;
+                align-items: center;
+                margin: 0 0.5rem;
+                border: 1px solid rgb(95, 99, 104);
+                padding: 0.25rem;
+                width: 7rem;
+                border-radius: 0.5rem;
+
+                &>i {
+                    margin-right: 0.15rem;
+                }
+
+                &>p,
+                i {
+                    font-size: small;
+                }
             }
         }
 
@@ -167,7 +190,7 @@
             &>.remainder-setter {
                 position: absolute;
                 align-self: center;
-                bottom: 2rem;
+                bottom: -10rem;
                 z-index: 5;
             }
         }
