--- a/src/app/notes/components/main/note-display/remainder-setter/remainder-setter.component.scss
+++ b/src/app/notes/components/main/note-display/remainder-setter/remainder-setter.component.scss
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     border-radius: 0.25rem;
-    gap: 1rem;
     width: 15rem;
     height: max-content;
     background-color: rgb(32, 33, 36);
@@ -20,6 +19,7 @@
     &>.header {
         font-weight: 600;
         font-size: 1rem;
+        padding: 0.5rem;
     }
 
     i,
@@ -35,12 +35,18 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        padding: 0.5rem;
+        cursor: pointer;
+        &:hover{
+            background-color: rgba(84, 84, 84, 0.245);
+        }
     }
 
     &>.select-datetime {
         display: flex;
         align-items: center;
         gap: 0.5rem;
+        padding: 0.5rem;
     }
 
     &>header {
