--- a/src/app/notes/components/main/note-display/single-note/single-note/single-note.component.scss
+++ b/src/app/notes/components/main/note-display/single-note/single-note/single-note.component.scss
@@ -10,6 +10,10 @@
     background-position: center;
     background-repeat: no-repeat;
 
+    p {
+        margin: 0;
+    }
+
     &:hover {
 
         &>.info,
@@ -77,9 +81,26 @@
         &>p,
         span {
             font-size: small;
-            border: 1px solid rgb(179, 179, 179);
-            padding: 0.25rem;
+            border: 1px solid rgb(95, 99, 104);
+            padding: 0.15rem;
             border-radius: 0.5rem;
+        }
+    }
+
+    &>.remainder {
+        display: flex;
+        align-items: center;
+        margin: 0 0.5rem;
+        border: 1px solid rgb(95, 99, 104);
+        padding: 0.25rem;
+        width: 7rem;
+        border-radius: 0.5rem;
+        &>i{
+            margin-right: 0.15rem;
+        }
+        &>p,
+        i {
+            font-size: small;
         }
     }
 
@@ -126,7 +147,7 @@
             position: absolute;
             align-self: center;
             z-index: 5;
-            bottom: 2rem;
+            bottom: -10.5rem;
         }
     }
 }
