--- a/src/app/notes/components/main/notes-bin/notes-bin.component.html
+++ b/src/app/notes/components/main/notes-bin/notes-bin.component.html
@@ -12,6 +12,7 @@
                     <main class="content">
                         <header>{{note.title}}</header>
                         <p>{{note.content.slice(0, 550)}}{{note.content.length > 550 ? "..." : ""}}</p>
+                        <p class="empty" *ngIf="note.content==='\n'">Empty note</p>
                         <div *ngIf="note.labels && note.labels.length > 0" class="labels">
                             <p *ngFor="let item of note.labels">{{item}}</p>
                         </div>
