--- a/src/app/notes/components/main/notes-bin/notes-bin.component.scss
+++ b/src/app/notes/components/main/notes-bin/notes-bin.component.scss
@@ -112,6 +112,11 @@
                             margin-bottom: 5px;
                             text-align: justify;
                         }
+
+                        &>.empty {
+                            color: rgb(204, 204, 204);
+                            font-size: 1.5rem;
+                        }
                     }
                 }
 
@@ -140,7 +145,7 @@
                             width: max-content;
                             padding: 0.15rem;
                             border-radius: 0.25rem;
-                            bottom: -1rem;
+                            bottom: -1.5rem;
                             text-align: center;
                             font-size: small;
                             background-color: rgba(82, 83, 85, 0.67);
@@ -151,7 +156,7 @@
         }
     }
 
-    &>.empty{
+    &>.empty {
         position: absolute;
         display: flex;
         flex-direction: column;
@@ -159,13 +164,15 @@
         gap: 2rem;
         justify-content: center;
         top: 40%;
-        &>p{
+
+        &>p {
             font-size: 1.5rem;
             color: rgb(154, 160, 166);
         }
-        &>i{
+
+        &>i {
             font-size: 5rem;
-            color: rgb(55,56,58);
+            color: rgb(55, 56, 58);
         }
     }
 }
